# MSCom

./: CMakeLists.txt  main.cpp
MSCom/: ComMeasurements.cpp  ComMeasurements.h  MSCom.cpp  MSCom.h
MSCom/lib/: BitView.cpp  BitView.h  Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  EncoderOld.cpp  EncoderOld.h  nave96.cpp  nave96.h
MSComp/: MSComp.cpp  MSComp.h
MSComp/lib/: Encoder.h  nave96.h
tests/: DecoderTests.cpp  EncoderTests.cpp  nave96Tests.cpp
tests/files/: Screenshot2022-01-24at10.41.13.png.nave96
